Job list items created

--- a/src/app/header/header.component.css
+++ b/src/app/header/header.component.css
@@ -5,11 +5,12 @@
 
 .wrapHeader {
     display: grid;
-    grid-template-columns: 1fr 8fr;
+    grid-template-columns: 2fr 8fr;
 }
 
 .logo img {
     max-height: 80px;
+    float: right;
 }
 
 .logo-name {
