--- a/src/app/home/about-us/about-body/about-body.component.html
+++ b/src/app/home/about-us/about-body/about-body.component.html
@@ -11,10 +11,9 @@
           </span>
           <span id="plus">
             <strong>PLUS</strong>
-          </span>
-          is a one-stop E-Services Portal for Hospitality & Tourism Solutions. We advertise and recruit for most hotels in Nigeria.
-          We also partner with high profile and standard reputable hotels to provide luxury hotel rooms at affordable prices,
-          plus other hospitality and tourism services for your convenience. With
+          </span> is a one-stop E-Services Portal for Hospitality & Tourism Solutions. We advertise job vacancies
+          and recruit for most hotels in Nigeria. We also partner with high profile and standard reputable hotels to provide
+          luxury hotel rooms at affordable prices, plus other hospitality and tourism services for your convenience. With
           <span id="hotel">
             <strong>HOTEL</strong>
           </span>
@@ -23,8 +22,7 @@
           </span>
           <span id="plus">
             <strong>PLUS</strong>
-          </span>
-          , hotel room reservations are made without hassles.
+          </span> , hotel room reservations are made without hassles.
         </p>
       </div>
       <div class="row margin-tp">
@@ -33,104 +31,104 @@
             <span id="hotel">
               <strong>HOTEL</strong>
             </span>
-            <span id="room">
+        <span id="room">
               <strong>ROOM</strong>
             </span>
-            <span id="plus">
+        <span id="plus">
               <strong>PLUS</strong>
             </span>
-            <span> offer these online services. Please click as you desire:</span>
-          </div>
-        </span>
+        <span> offer these online services. Please click as you desire:</span>
       </div>
-      <div class="row margin-tp">
-        <div class="metro">
-          <div class="card-rec pull-up animated fadeInLeft" routerLink="/job-portal">
-            <div class="top-most">
-              <div class="tips">Get your dream job</div>
-              <div class="img">
-                <img src="assets/images/icons/job.png" alt="">
-              </div>
+      </span>
+    </div>
+    <div class="row margin-tp">
+      <div class="metro">
+        <div class="card-rec pull-up animated fadeInLeft" routerLink="/job-portal">
+          <div class="top-most">
+            <div class="tips">Get your dream job</div>
+            <div class="img">
+              <img src="assets/images/icons/job.png" alt="">
             </div>
-            <span class="one">
+          </div>
+          <span class="one">
               <strong>
                 <a class="card-title">ONLINE JOB ADVERT & EMPLOYMENT SERVICES</a>
               </strong>
             </span>
-            <div class="action-btn-full">View Jobs</div>
-          </div>
-          <div class="card-rec pull-up animated fadeInRight">
-            <div class="top-most">
-              <div class="tips">Visit our blog</div>
-              <div class="img">
-                <img src="assets/images/icons/event.png" alt="">
-              </div>
+          <div class="action-btn-full">View Jobs</div>
+        </div>
+        <div class="card-rec pull-up animated fadeInRight">
+          <div class="top-most">
+            <div class="tips">Visit our blog</div>
+            <div class="img">
+              <img src="assets/images/icons/event.png" alt="">
             </div>
-            <span class="one">
+          </div>
+          <span class="one">
               <strong>
                 <a class="card-title">VISIT OUR BLOG FOR HOSPITALITY GISTS</a>
               </strong>
             </span>
-            <div class="action-btn-full">See Blog</div>
-          </div>
-          <div class="card pull-up animated fadeInLeft">
-            <div class="top-most">
-              <div class="tips">Booking Made Easy</div>
-              <div class="img">
-                <img src="assets/images/icons/hotel.png" alt="">
-              </div>
+          <div class="action-btn-full">See Blog</div>
+        </div>
+        <div class="card pull-up animated fadeInLeft">
+          <div class="top-most">
+            <div class="tips">Booking Made Easy</div>
+            <div class="img">
+              <img src="assets/images/icons/hotel.png" alt="">
             </div>
-            <span class="one">
+          </div>
+          <span class="one">
               <strong>
                 <a class="card-title">ONLINE HOTEL ROOM BOOKING/RESERVATION</a>
               </strong>
             </span>
-            <div class="action-btn-empty">Book Today</div>
-          </div>
-          <div class="card pull-up animated fadeInRight">
-            <div class="top-most">
-              <div class="tips">Experience Nigeria</div>
-              <div class="XLimg">
-                <img src="assets/images/icons/resort.png" alt="">
-              </div>
+          <div class="action-btn-empty">Book Today</div>
+        </div>
+        <div class="card pull-up animated fadeInRight">
+          <div class="top-most">
+            <div class="tips">Experience Nigeria</div>
+            <div class="XLimg">
+              <img src="assets/images/icons/resort.png" alt="">
             </div>
-            <span class="one">
+          </div>
+          <span class="one">
               <strong>
                 <a class="card-title">TOURIST SITES AND RESORT RESERVATION</a>
               </strong>
             </span>
-            <div class="action-btn-empty">View Sites</div>
-          </div>
-          <div class="card pull-up animated fadeInLeft">
-            <div class="top-most">
-              <div class="tips">Ratings do matter</div>
-              <div class="XLimg">
-                <img src="assets/images/icons/notable-hotels.png" alt="">
-              </div>
+          <div class="action-btn-empty">View Sites</div>
+        </div>
+        <div class="card pull-up animated fadeInLeft">
+          <div class="top-most">
+            <div class="tips">Ratings do matter</div>
+            <div class="XLimg">
+              <img src="assets/images/icons/notable-hotels.png" alt="">
             </div>
-            <span class="one">
+          </div>
+          <span class="one">
               <strong>
                 <a class="card-title">REVIEW OF NOTABLE HOTELS AND TOURIST SITES IN NIGERIA</a>
               </strong>
             </span>
-            <div class="action-btn-empty">See</div>
-          </div>
-          <div class="card pull-up animated fadeInRight">
-            <div class="top-most">
-              <div class="tips">Travel without hassles</div>
-              <div class="img">
-                <img src="assets/images/icons/travel.png" alt="">
-              </div>
+          <div class="action-btn-empty">See</div>
+        </div>
+        <div class="card pull-up animated fadeInRight">
+          <div class="top-most">
+            <div class="tips">Travel without hassles</div>
+            <div class="img">
+              <img src="assets/images/icons/travel.png" alt="">
             </div>
-            <span class="one">
+          </div>
+          <span class="one">
               <strong>
                 <a class="card-title">ONLINE TOURS PACKAGING AND TRAVEL SERVICES</a>
               </strong>
             </span>
-            <div class="action-btn-empty">Find Out</div>
-          </div>
+          <div class="action-btn-empty">Find Out</div>
         </div>
       </div>
     </div>
   </div>
+</div>
 </div>
