--- a/src/app/job-portal/top-ads/top-ads.component.html
+++ b/src/app/job-portal/top-ads/top-ads.component.html
@@ -3,14 +3,14 @@
     <div class="metro">
       <div class="card-rec pull-up animated fadeInLeft" routerLink="/job-portal">
         <div class="top-most">
-          <div class="tips">Get your dream job</div>
+          <div class="tips">Visit our blog</div>
           <div class="img">
-            <img src="assets/images/icons/job.png" alt="">
+            <img src="assets/images/icons/event.png" alt="">
           </div>
         </div>
         <span class="one">
           <strong>
-            <a class="card-title">ONLINE JOB ADVERT & EMPLOYMENT SERVICES</a>
+            <a class="card-title">VISIT OUR BLOG FOR HOSPITALITY GISTS</a>
           </strong>
         </span>
         <div class="action-btn-full">View Jobs</div>
