--- a/src/app/vacancy-board/vacancy-board.component.html
+++ b/src/app/vacancy-board/vacancy-board.component.html
@@ -58,7 +58,7 @@
     </div>
   </aside>
   <div class="main-job-area">
-    <div class="metro">
+    <!-- <div class="metro">
       <div class="card-rec pull-up animated fadeInLeft" routerLink="/job-portal">
         <div class="top-most">
           <div class="tips">Get your dream job</div>
@@ -87,6 +87,42 @@
         </span>
         <div class="action-btn-empty">Book Today</div>
       </div>
-    </div>
+    </div> -->
+
+    <ul class="job-list">
+      <li class="job-list-item">
+        <div data-toggle="collapse" data-target="#job-row1" class="clickable">
+          <div class="job-row-one">
+            <div class="job-title">IHS Towers Job Recruitment (3 Positions)</div>
+            <div class="date-posted">Oct 2nd, 4:00 pm GMT</div>
+            <div class="job-description">Description</div>
+          </div>
+        </div>
+        <div id="job-row1" class="collapse">
+          <div class="job-row-two">
+            <h4 class="featured">featured</h4>
+            <p>HS Towers, the largest independent mobile telecommunications infrastructure provider in Europe, Africa and the
+              Middle East, is currently seeking applications from suitably qualified candidates to fill the following positions</p><a>Read More...</a>
+          </div>
+        </div>
+      </li>
+      <li class="job-list-item">
+        <div data-toggle="collapse" data-target="#job-row2" class="clickable">
+          <div class="job-row-one">
+            <div class="job-title">
+              MainOne Cable Nigeria Job Recruitment (5 Positions)</div>
+            <div class="date-posted">Oct 2nd, 4:00 pm GMT</div>
+            <div class="job-description">Description</div>
+          </div>
+        </div>
+        <div id="job-row2" class="collapse">
+          <div class="job-row-two">
+            <h4 class="featured">featured</h4>
+            <p>HS Towers, the largest independent mobile telecommunications infrastructure provider in Europe, Africa and the
+              Middle East, is currently seeking applications from suitably qualified candidates to fill the following positions</p><a>Read More...</a>
+          </div>
+        </div>
+      </li>
+    </ul>
   </div>
 </div>
