--- a/src/app/vacancy-board/vacancy-board.component.html
+++ b/src/app/vacancy-board/vacancy-board.component.html
@@ -1,10 +1,10 @@
 <!-- Mobile View -->
-<!-- <div class="mobile-alt-bar">
+<div class="mobile-alt-bar">
   <div class="menu-btn">
-    <span>Job Menu</span>
+    <span>Job Categories</span>
   </div>
   <div class="mobile-menu-dropdown"></div>
-</div> -->
+</div>
 <!-- Standard View -->
 <div class="wrapper">
   <aside>
@@ -58,37 +58,6 @@
     </div>
   </aside>
   <div class="main-job-area">
-    <!-- <div class="metro">
-      <div class="card-rec pull-up animated fadeInLeft" routerLink="/job-portal">
-        <div class="top-most">
-          <div class="tips">Get your dream job</div>
-          <div class="img">
-            <img src="assets/images/icons/job.png" alt="">
-          </div>
-        </div>
-        <span class="one">
-          <strong>
-            <a class="card-title">ONLINE JOB ADVERT & EMPLOYMENT SERVICES</a>
-          </strong>
-        </span>
-        <div class="action-btn-full">View Jobs</div>
-      </div>
-      <div class="card pull-up animated fadeInLeft">
-        <div class="top-most">
-          <div class="tips">Booking Made Easy</div>
-          <div class="img">
-            <img src="assets/images/icons/hotel.png" alt="">
-          </div>
-        </div>
-        <span class="one">
-          <strong>
-            <a class="card-title">ONLINE HOTEL ROOM BOOKING/RESERVATION</a>
-          </strong>
-        </span>
-        <div class="action-btn-empty">Book Today</div>
-      </div>
-    </div> -->
-
     <ul class="job-list">
       <li class="job-list-item">
         <div data-toggle="collapse" data-target="#job-row1" class="clickable">
