--- a/src/app/job-portal/top-ads/top-ads.component.html
+++ b/src/app/job-portal/top-ads/top-ads.component.html
@@ -1,6 +1,22 @@
 <div class="container">
   <div class="wrapper">
-    <div class="metro">
+    <div class="ads-full-length">
+      <div class="ad1">
+        <span>(Space for paid ad)</span>
+      </div>
+      <div class="ad1">
+        <span>(Space for paid ad)</span>
+      </div>
+    </div>
+    <div class="ads-half-length">
+      <div class="ad3">
+        <span>(Space for paid ad)</span>
+      </div>
+      <div class="ad4">
+        <span>(Space for paid ad)</span>
+      </div>
+    </div>
+    <!-- <div class="metro">
       <div class="card-rec pull-up animated fadeInLeft" routerLink="/job-portal">
         <div class="top-most">
           <div class="tips">Visit our blog</div>
@@ -29,6 +45,6 @@
         </span>
         <div class="action-btn-empty">Book Today</div>
       </div>
-    </div>
+    </div> -->
   </div>
 </div>
