--- a/src/app/vacancy-board/vacancy-listing/vacancy-listing.component.css
+++ b/src/app/vacancy-board/vacancy-listing/vacancy-listing.component.css
@@ -47,6 +47,7 @@
 
 .job-title {
     display: grid;
+    grid-auto-flow: column;
     justify-content: left;
     align-content: center;
     font-size: 18px;
