--- a/src/app/vacancy-search/vacancy-search.component.html
+++ b/src/app/vacancy-search/vacancy-search.component.html
@@ -11,7 +11,7 @@
         <h1>Amazing Job Search</h1>
       </div>
       <div class="job-listing">
-        <app-search-result [preloadedVacancies]="preloadedVacancies"></app-search-result>
+        <!-- <app-search-result [preloadedVacancies]="preloadedVacancies"></app-search-result> -->
       </div>
     </div>
   </div>
