--- a/src/app/job-portal-home/job-portal-home.component.html
+++ b/src/app/job-portal-home/job-portal-home.component.html
@@ -26,7 +26,9 @@
     </div>
   </div>
 </div>
-
+<!-- Loading Bar -->
+<ng2-slim-loading-bar color="#00b050"></ng2-slim-loading-bar>
+<!--/ Loading Bar -->
 <!-- Vacancies / Job Searches / Tourism Info -->
 <router-outlet></router-outlet>
 <!-- <app-vacancy-board></app-vacancy-board> -->
