--- a/src/app/vacancy-board/vacancy-parent-view/vacancy-parent-view.component.css
+++ b/src/app/vacancy-board/vacancy-parent-view/vacancy-parent-view.component.css
@@ -51,6 +51,7 @@ ul {
 
 .job-title {
     display: grid;
+    grid-auto-flow: column;
     justify-content: left;
     align-content: center;
     font-size: 18px;
@@ -112,11 +113,18 @@ ul {
 }
 
 .small-top-margin {
-    margin-top: 7px;
+    margin-top: 10px;
 }
 
-.job-apply-online a {
-    color: #13A853
+.job-link span {
+    color: #13A853;
+    cursor: pointer;
+    font-weight: 600;
+    font-size: 16px;
+}
+
+.padding-top {
+    margin-top: 20px;
 }
 
 @media (max-width: 620px) {
