--- a/src/styles.css
+++ b/src/styles.css
@@ -1,6 +1,7 @@
 /* You can add global styles to this file, and also import other style files */
 
 /* @import "~@angular/material/prebuilt-themes/indigo-pink.css"; */
+@import "../node_modules/ng2-slim-loading-bar/style.css";
 
 input:focus,
 select:focus,
